application/java-secret-manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-secret-manager
  labels:
    app: java-secret-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-secret-manager
  template:
    metadata:
      labels:
        app: java-secret-manager
    spec:
      serviceAccountName: devfest-secrets-manager-accessor
      containers:
        - name: java-secret-manager
          image: "ghcr.io/anthonydurot/devfest-2021:recuperation-java-secrets-manager"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
