application/java-secret-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-secret-manager
  labels:
    app: java-secret-manager
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: java-secret-manager
